--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,21 @@
+body{
+  background-color: aqua
+  font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif; 
+  font-size: 18px;
+  width: 100%;
+  color: black;
+  height: 100%; 
+  text-align: center;
+}
+
+
 * {
   box-sizing: border-box;
 }
 
 
 body {
-
+  background-color: #00ffed;
   font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif; 
   font-size: 18px;
   width: 100%;
@@ -16,6 +27,7 @@ h1 {
   color: black;
   font-size: 30px;
   font-weight: bold;
+  text-align: center;
 }
 
 
@@ -52,4 +64,7 @@ h1 {
 #getchoice{
   float: top;
   margin-top: 15px;
+}
+#wins row well{
+  text-align: center;
 }
